// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu snapshots should render correctly some categories 1`] = `
<div
  className="menuLayout"
>
  <div
    className="menuContentWrapper"
  >
    <div
      className="menuCategory"
    >
      <div
        className="title"
      >
        menu1
      </div>
      <div
        className="itemsList"
      >
        <div
          className="menuCard"
          onClick={[Function]}
        >
          <div
            className="content roundedItem"
          >
            <div
              className="texts"
            >
              <div
                className="cardTitle"
              >
                mocked title
              </div>
              <div
                className="description"
              >
                mocked description
              </div>
              <div
                className="bottom"
              >
                <span
                  className="price"
                >
                   €
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="cartWrapper"
  >
    <div
      className="cart roundedItem"
    >
      <div>
        Votre panier est vide
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu snapshots should render correctly with default props 1`] = `
<div
  className="menuLayout"
>
  <div
    className="menuContentWrapper"
  />
  <div
    className="cartWrapper"
  >
    <div
      className="cart roundedItem"
    >
      <div>
        Votre panier est vide
      </div>
    </div>
  </div>
</div>
`;
